--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Home - Anzbot</title>
+<title>Home - Resolute</title>
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/font-awesome.min.css" rel="stylesheet">
 </head>
@@ -20,13 +20,13 @@ color: red;
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="http://anzbot.github.io">Anzbot</a>
+      <a class="navbar-brand" href="http://resoluteguild.github.io">Resolute</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="https://anzbot.github.io">Home <span class="sr-only">(current)</span></a></li>
-	<li><a href="https://anzbot.github.io/commands.html">Commands</a></li>
+        <li class="active"><a href="https://resoluteguild.github.io">Home <span class="sr-only">(current)</span></a></li>
+	<li><a href="https://resoluteguild.github.io/commands.html">Commands</a></li>
 		</ul>
     </div>
   </div>
@@ -34,8 +34,8 @@ color: red;
 <center>
 <div class="jumbotron">
   <img src="img/main.jpg" height="180" width="180" class=" img-circle"></img>
-  <h2>Anzbot</h2>
-  <p>A discord bot created by <a href="https://twitter.com/SynaDesigns">Syna</a></p>
+  <h2>Resolute</h2>
+  <p>A discord bot created by <b>Pixl</b>></p>
 </div>
 <div class="container">
 <div class="row">
