--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ color: red;
 <div class="jumbotron">
   <img src="img/main.jpg" height="180" width="180" class=" img-circle"></img>
   <h2>Resolute</h2>
-  <p>A discord bot created by <b>Pixl</b>></p>
+  <p>A discord bot created by <b>Pixl</b></p>
 </div>
 <div class="container">
 <div class="row">
@@ -43,7 +43,7 @@ color: red;
 <div class="panel panel-default">
   <div class="panel-heading"><i class="fa fa-users" aria-hidden="true"></i> About</div>
   <div class="panel-body">
-    Anzbot was at first a bot created for the streaming service <a href="https://twitch.tv">Twitch</a> but was now created as a Discord bot by <a href="https://twitter.com/SynaDesigns">Syna</a>
+    <p>Resolute is a Discord bot for the Resolute Guild's discord, it was created by <b>Pixl</b> to give the guild members guild information without a hasle.</p>
   </div>
 </div>
 </div>
@@ -51,23 +51,23 @@ color: red;
 <div class="panel panel-default">
   <div class="panel-heading"><i class="fa fa-sliders" aria-hidden="true"></i> Features</div>
   <div class="panel-body">
-    Anzbot currently has the following features: A few commands(such as !cat,!dog) and a Music System.
+    Current features are: WoW Lookup(raid progression, and such), and a lot more "sneaky" things!
   </div>
 </div>
 </div>
 <div class="col-md-4">
 <div class="panel panel-default">
-  <div class="panel-heading"><i class="fa fa-lock" aria-hidden="true"></i> How do I get it?</div>
+  <div class="panel-heading"><i class="fa fa-lock" aria-hidden="true"></i>In-development</div>
   <div class="panel-body">
-    At this time Anzbot is a private bot.</a>
+    The bot is still under active development, so expect bugs, and etc.</a>
   </div>
 </div>
 </div>
 </div>
 <div class="well">
-  Copyright &copy; 2017 <a href="http://anzbot.github.io">Anzbot</a><br>
-  Created with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://twitter.com/SynaDesigns">Syna</a><br>
-  Anzbot currently running on: <a href="#" data-toggle="modal" data-target="#changelog"><span class="label label-default">v1.3</span></a>
+  Copyright &copy; 2020 <a href="http://resoluteguild.github.io">Resolute</a><br>
+  Created with <i class="fa fa-heart" aria-hidden="true"></i> by <b>Pixl</b>/a><br>
+  Anzbot currently running on: <a href="#" data-toggle="modal" data-target="#changelog"><span class="label label-default">v1.0</span></a>
 </div>
 </div>
 
@@ -84,21 +84,13 @@ color: red;
       <div class="modal-body">
     <div class="panel panel-default" data-toggle="collapse" href="#collapse2">
   <div class="panel-heading">Anzbot v1.3</div>
-  <div id="collapse2" class="panel-collapse collapse in">
-  <div class="panel-body">
-    + Added !roll - Rolls from 1 - 100<br>
-    + Added !commands - So you can know all the commands.. cause tbh their the best part of a bot<br>
-  <cite title="Anzbot Team">&#8212; Anzbot Team</cite>
-  </div>
-  </div>
 </div>
 	  <div class="panel panel-default" data-toggle="collapse" href="#collapse1">
-  <div class="panel-heading">Anzbot v1.2</div>
+  <div class="panel-heading">Resolute Bot v1.0</div>
   <div id="collapse1" class="panel-collapse collapse in">
   <div class="panel-body">
-    + Added !snoop(translate anything the snoop dog way)<br>
-    + Rewrote command system<br>
-	<cite title="Anzbot Team">&#8212; Anzbot Team</cite>
+    - First Build
+	<cite title="Pixl">&#8212; Pixl</cite>
 	</div>
   </div>
 </div>
