--- a/index.html
+++ b/index.html
@@ -79,11 +79,9 @@ color: red;
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Anzbot Changelog</h4>
+        <h4 class="modal-title" id="myModalLabel">Resolute Bot Changelog</h4>
       </div>
       <div class="modal-body">
-    <div class="panel panel-default" data-toggle="collapse" href="#collapse2">
-  <div class="panel-heading">Anzbot v1.3</div>
 </div>
 	  <div class="panel panel-default" data-toggle="collapse" href="#collapse1">
   <div class="panel-heading">Resolute Bot v1.0</div>
