--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ color: red;
 </div>
 <div class="well">
   Copyright &copy; 2020 <a href="http://resoluteguild.github.io">Resolute</a><br>
-  Created with <i class="fa fa-heart" aria-hidden="true"></i> by <b>Pixl</b>/a><br>
+  Created with <i class="fa fa-heart" aria-hidden="true"></i> by <b>Pixl</b><br>
   Anzbot currently running on: <a href="#" data-toggle="modal" data-target="#changelog"><span class="label label-default">v1.0</span></a>
 </div>
 </div>
