--- a/commands.html
+++ b/commands.html
@@ -1,127 +1,85 @@
-
 <!DOCTYPE html>
 <html>
-<head>
-<title>Commands - Anzbot</title>
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/font-awesome.min.css" rel="stylesheet">
-</head>
-<body>
+  <head>
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/all.css" rel="stylesheet">
+  </head>
 <style>
-.fa-heart{
-color: red;
-}
+  .fa-heart{
+    color: red;
+  }
 </style>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="http://anzbot.github.io">Anzbot</a>
-    </div>
+<body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Resolute</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="https://anzbot.github.io">Home</a></li>
-	<li class="active"><a href="https://anzbot.github.io/commands.html">Commands <span class="sr-only">(current)</span></a></li>
-		</ul>
-    </div>
+  <div class="collapse navbar-collapse" id="navbarColor02">
+    <ul class="navbar-nav mr-auto">
+      <li>
+        <a class="nav-link" href="#">Home</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Commands <span class="sr-only">(current)</span></a>
+      </li>
+      </li>
+    </ul>
   </div>
 </nav>
+<br>
+
+<!-- <div class="alert alert-dismissible alert-success">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <i class="fas fa-code"></i> This website & bot is still under active development, <strong>bugs, new features, and removed features are expected!</strong>
+</div> -->
+
 <center>
-<table class="table table-striped table-hover ">
-  <thead>
-    <tr>
-      <th>Command Name</th>
-      <th>Command Description</th> 
-      <th>Command Example</th>
+    <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">Command Name</th>
+            <th scope="col">Command Description	</th>
+            <th scope="col">Command Usage</th>
+          </tr>
+        </thead>
+        <tbody>
+            <tr class="table-dark">
+                <th scope="row">!lookup</th>
+                <td>Lookup a character on WoW, returns IlvL, and raid progression</td>
+                <td>!lookup Pixl</td>
 
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>!cat</td>
-      <td>Returns a random cat picture.</td>
-      <td>!cat</td>
-    </tr>
-    <tr>
-      <td>!dog</td>
-      <td>Returns a random dog picture.</td>
-      <td>!dog</td>
-    </tr>
-     <tr>
-      <td>!about</td>
-      <td>Tells you a bit about the bot and the current version.</td>
-      <td>!about</td>
-    </tr>
-     <tr>
-      <td>!roll</td>
-      <td>Returns a random number between 1 - 100</td>
-      <td>!roll</td>
-    </tr>
-     <tr>
-      <td>!snoop</td>
-      <td>Gets user input and translates it the Snoop Dog Way.</td>
-      <td>!snoop Hello, I'm Anzbot.</td>
-    </tr>
-     <tr>
-      <td>!commands</td>
-      <td>Tells you the link to this page.</td>
-      <td>!commands</td>
-    </tr>
-  </tbody>
-</table> 
-<div class="well">
-  Copyright &copy; 2017 <a href="http://anzbot.github.io">Anzbot</a><br>
-  Created with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://twitter.com/SynaDesigns">Syna</a><br>
-  Anzbot currently running on: <a href="#" data-toggle="modal" data-target="#changelog"><span class="label label-default">v1.3</span></a>
-</div>
-</div>
+              </tr>
+              <tr class="table-dark">
+                <th scope="row">!cat</th>
+                <td>Responds with a random cat picture.</td>
+                <td>!cat</td>
 
+              </tr>
+              <tr class="table-dark">
+                <th scope="row">!dog</th>
+                <td>Responds with a random dog picture.</td>
+                <td>!dog</td>
+
+              </tr>
+
+        </tbody>
+      </table> 
+
+
+
+
+
+<footer>
+<div class="card">
+  <div class="card-body">
+    Copyright &copy; 2020 <a href="resoluteguild.github.io">Resolute</a><br>
+    Created with <i class="fas fa-heart"></i> by <b>Pixl</b>
+  </div>
+</div>
+</footer>
 
 </center>
-<!-- Modal -->
-<div class="modal fade" id="changelog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Anzbot Changelog</h4>
-      </div>
-      <div class="modal-body">
-    <div class="panel panel-default" data-toggle="collapse" href="#collapse2">
-  <div class="panel-heading">Anzbot v1.3</div>
-  <div id="collapse2" class="panel-collapse collapse in">
-  <div class="panel-body">
-    + Added !roll - Rolls from 1 - 100<br>
-    + Added !commands - So you can know all the commands.. cause tbh their the best part of a bot<br>
-  <cite title="Anzbot Team">&#8212; Anzbot Team</cite>
-  </div>
-  </div>
-</div>
-    <div class="panel panel-default" data-toggle="collapse" href="#collapse1">
-  <div class="panel-heading">Anzbot v1.2</div>
-  <div id="collapse1" class="panel-collapse collapse in">
-  <div class="panel-body">
-    + Added !snoop(translate anything the snoop dog way)<br>
-    + Rewrote command system<br>
-  <cite title="Anzbot Team">&#8212; Anzbot Team</cite>
-  </div>
-  </div>
-</div>
-
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-<script src="js/jquery-3.2.1.min.js"></script>    
-<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
