--- a/index.html
+++ b/index.html
@@ -1,106 +1,91 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Home - Resolute</title>
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/font-awesome.min.css" rel="stylesheet">
-</head>
-<body>
+  <head>
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/all.css" rel="stylesheet">
+  </head>
 <style>
-.fa-heart{
-color: red;
-}
+  .fa-heart{
+    color: red;
+  }
 </style>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="http://resoluteguild.github.io">Resolute</a>
-    </div>
+<body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Resolute</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="https://resoluteguild.github.io">Home <span class="sr-only">(current)</span></a></li>
-	<li><a href="https://resoluteguild.github.io/commands.html">Commands</a></li>
-		</ul>
-    </div>
+  <div class="collapse navbar-collapse" id="navbarColor02">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Commands</a>
+      </li>
+      </li>
+    </ul>
   </div>
 </nav>
+<br>
+
+<!-- <div class="alert alert-dismissible alert-success">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <i class="fas fa-code"></i> This website & bot is still under active development, <strong>bugs, new features, and removed features are expected!</strong>
+</div> -->
+
 <center>
 <div class="jumbotron">
-  <img src="img/main.jpg" height="180" width="180" class=" img-circle"></img>
+  <img src="img/logo.png" class="rounded-circle" height="180" width="180">
   <h2>Resolute</h2>
   <p>A discord bot created by <b>Pixl</b></p>
+  </p>
 </div>
 <div class="container">
 <div class="row">
 <div class="col-md-4">
-<div class="panel panel-default">
-  <div class="panel-heading"><i class="fa fa-users" aria-hidden="true"></i> About</div>
-  <div class="panel-body">
-    <p>Resolute is a Discord bot for the Resolute Guild's discord, it was created by <b>Pixl</b> to give the guild members guild information without a hasle.</p>
-  </div>
-</div>
-</div>
-<div class="col-md-4">
-<div class="panel panel-default">
-  <div class="panel-heading"><i class="fa fa-sliders" aria-hidden="true"></i> Features</div>
-  <div class="panel-body">
-    Current features are: WoW Lookup(raid progression, and such), and a lot more "sneaky" things!
-  </div>
-</div>
-</div>
-<div class="col-md-4">
-<div class="panel panel-default">
-  <div class="panel-heading"><i class="fa fa-lock" aria-hidden="true"></i>In-development</div>
-  <div class="panel-body">
-    The bot is still under active development, so expect bugs, and etc.</a>
-  </div>
-</div>
-</div>
-</div>
-<div class="well">
-  Copyright &copy; 2020 <a href="http://resoluteguild.github.io">Resolute</a><br>
-  Created with <i class="fa fa-heart" aria-hidden="true"></i> by <b>Pixl</b><br>
-  Anzbot currently running on: <a href="#" data-toggle="modal" data-target="#changelog"><span class="label label-default">v1.0</span></a>
-</div>
-</div>
-
-
-</center>
-<!-- Modal -->
-<div class="modal fade" id="changelog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Resolute Bot Changelog</h4>
-      </div>
-      <div class="modal-body">
-</div>
-	  <div class="panel panel-default" data-toggle="collapse" href="#collapse1">
-  <div class="panel-heading">Resolute Bot v1.0</div>
-  <div id="collapse1" class="panel-collapse collapse in">
-  <div class="panel-body">
-    - First Build
-	<cite title="Pixl">&#8212; Pixl</cite>
-	</div>
-  </div>
-</div>
-
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
+  <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
+    <div class="card-header"><i class="fas fa-users"></i> About</div>
+    <div class="card-body">
+      <p class="card-text">Resolute is a Discord bot for the Resolute Guild's discord, it was created by Pixl to give the guild members guild information without a hasle.</p>
     </div>
   </div>
 </div>
-<script src="js/jquery-3.2.1.min.js"></script>    
-<script src="js/bootstrap.min.js"></script>
+<div class="col-md-4">
+  <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
+    <div class="card-header"><i class="fas fa-sliders-h"></i> Features</div>
+    <div class="card-body">
+      <p class="card-text">Current features are: WoW Lookup(raid progression, and such), and a lot more "sneaky" things!</p>
+    </div>
+  </div>
+</div>
+<div class="col-md-4">
+  <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
+    <div class="card-header"><i class="fas fa-code"></i> Under Development</div>
+    <div class="card-body">
+      <p class="card-text">The bot is still under active development, so expect bugs, and etc.</p>
+    </div>
+  </div>
+</div>
+
+
+</div>
+</div>
+
+
+
+
+
+<footer>
+<div class="card">
+  <div class="card-body">
+    Copyright &copy; 2020 <a href="resoluteguild.github.io">Resolute</a><br>
+    Created with <i class="fas fa-heart"></i> by <b>Pixl</b>
+  </div>
+</div>
+</footer>
+
+</center>
 </body>
 </html>
