--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Commands</a>
+        <a class="nav-link" href="commands.html">Commands</a>
       </li>
       </li>
     </ul>
