Fix links part 2

--- a/commands.html
+++ b/commands.html
@@ -74,7 +74,7 @@
 <footer>
 <div class="card">
   <div class="card-body">
-    Copyright &copy; 2020 <a href="resoluteguild.github.io">Resolute</a><br>
+    Copyright &copy; 2020 <a href="http://resoluteguild.github.io">Resolute</a><br>
     Created with <i class="fas fa-heart"></i> by <b>Pixl</b>
   </div>
 </div>
